# serializer version: 1
# name: test_switch_setup[switch.test_keypad_test_button-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_keypad_test_button',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Test Button',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Test Button',
    'platform': 'lutron',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12345678901_led_uuid',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[switch.test_keypad_test_button-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Keypad Test Button',
      'keypad': 'Test Keypad',
      'led': 'Test LED',
      'scene': 'Test Button',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_keypad_test_button',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_setup[switch.test_switch-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.test_switch',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lutron',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '12345678901_switch_uuid',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_setup[switch.test_switch-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Switch',
      'lutron_integration_id': 'switch_id',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
